Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -424,6 +424,14 @@
                         <div class="file"><a href="extras/2023HS.zip" target="_blank">HS 23</a></div>
                     </div>
                 </div>
+
+                <div class="week">
+                    <h3>Lernplan Vorlage (Mein Lernplan im 1. Semester)</h3>
+                    <div class="files">
+                        <div class="file"><a href="Lernphase Winter.xlsx" download>Lernplan herunterladen</a>
+                        </div>
+                    </div>
+                </div>
                 <!-- weitere Extras nach gleichem Muster -->
             </div>
         </section>
@@ -446,4 +454,5 @@
 
 
 </html>
+
 
